Set up Docker role, add compose file
The Docker role now does pretty much everything needed to set up a Docker
server - installing Docker, copying the compose file over, setting group
membership, etc. The docker-compose.yml lives in this repository now, as
does the (encrypted) .env file.

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -65,4 +65,4 @@
   when: sshd.changed
 
 #TODO: user password, GRUB config, .vimrc, ufw config
-#      clone dotfiles git repo and stow, 
+#      clone dotfiles git repo and stow, default editor
