Consolidate Docker servers into single roll
I realized as I was splitting out the Docker machines into their own
roles yesterday that I was duplicating a fair amount of code, but I
hadn't figured out how to fix it. Overnight, I realized that host
variables were the solution. I left the old roles around - they might
come in handy if I need to further distinguish the machines in the
future.

--- a/deploy.yml
+++ b/deploy.yml
@@ -23,15 +23,15 @@
     - geerlingguy.docker
     - docker_server
 
-- hosts: app_server
-  become: true
-  roles:
-    - app_server
+# - hosts: app_server
+#   become: true
+#   roles:
+#     - app_server
 
-- hosts: game_server
-  become: true
-  roles:
-    - game_server
+# - hosts: game_server
+#   become: true
+#   roles:
+#     - game_server
 
 - hosts: bastion
   become: true
