--- a/roles/docker_server/tasks/main.yml
+++ b/roles/docker_server/tasks/main.yml
@@ -27,3 +27,64 @@
     name: 
     - docker
     - docker-compose
+
+- name: Create mountpoints
+  tags: config, nfs
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: directory
+  loop: "{{ nfs_dirs }}"
+  register: mountpoints
+
+- name: Make mountpoints immutable
+  tags: config, nfs
+  ansible.builtin.file:
+    path: "{{ item }}"
+    attributes: +i
+  loop: "{{ nfs_dirs }}"
+  when: mountpoints.changed
+
+- name: Map NFS shares
+  tags: config, nfs
+  lineinfile:
+    path: /etc/fstab
+    regexp: "{{ item }}"
+    line: 10.0.0.5:{{ item }}	{{ item }}	nfs	auto	0	0
+  loop: "{{ nfs_dirs }}"
+  register: nfs
+  
+
+- name: Copy docker-compose.yml
+  tags: docker, compose
+  copy:
+    src: "{{ compose_file }}"
+    dest: "{{ compose_dir }}docker-compose.yml"
+    mode: 0664
+    owner: root
+    group: docker 
+
+- name: Copy .env
+  tags: docker, compose
+  copy:
+    src: "{{ env_file }}"
+    dest: "{{ compose_dir }}.env"
+    mode: 0440
+    owner: root
+    group: docker 
+
+- name: Create and start services
+  tags: docker, compose, update
+  community.docker.docker_compose:
+    project_src: "{{ compose_dir }}"
+    pull: yes
+    remove_orphans: yes
+  register: output
+
+- name: Prune everything
+  tags: docker, compose, update
+  community.docker.docker_prune:
+    containers: yes
+    images: yes
+    networks: yes
+    volumes: yes
+    builder_cache: yes
