--- a/inventory.yml
+++ b/inventory.yml
@@ -1,6 +1,6 @@
 all:
   vars:
-    ansible_python_interpreter: auto
+    ansible_python_interpreter: auto_silent
     ansible_user: ansible
     user: aven
 
@@ -8,20 +8,33 @@ all:
     docker:
     gaming:
     work:
+    arch-dev:
   
   children:
-    docker_server:
-      hosts:    
-        docker:
-          nfs_dirs: [/ssd/app, /hdd/app]
-          compose_file: apps-docker-compose.yml
-          env_file: apps.env
-        gaming:
-          nfs_dirs: [/ssd/app/games]
-          compose_file: games-docker-compose.yml
-          env_file: games.env
+    debian:
+      children:
+        work_server:
+          hosts:
+            work:
+        
+        docker_server:
+          vars:
+            compose_dir: /opt/doc/
+          hosts:   
 
-      vars:
-        compose_dir: /opt/doc/
+            docker:
+              nfs_dirs: [/ssd/app, /hdd/app]
+              compose_file: apps-docker-compose.yml
+              env_file: apps.env
+            
+            gaming:
+              nfs_dirs: [/ssd/app/games]
+              compose_file: games-docker-compose.yml
+              env_file: games.env
+        
 
+
+    arch:
+      hosts:
+        arch-dev:
 
