Continue dotfile role work
About to refactor though

--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -12,4 +12,9 @@
     state: link
     force: yes
   with_items:
-    - { src: "vimrc", dst: ".vimrc" }
+    - { src: "vim/vimrc", dst: ".vimrc" }
+    - { src: "i3", dst: ".config/i3" }
+    - { src: "i3status", dst: ".config/i3status" }
+    - { src: "kitty", dst: ".config/kitty" }
+    - { src: "zsh/zshrc.local", dst: ".zshrc.local" }
+
