--- a/deploy.yml
+++ b/deploy.yml
@@ -9,7 +9,6 @@
     changed_when: false
     apt:
       update_cache: yes
-
   - name: Run dist-upgrade
     tags: upgrade
     apt:
@@ -43,7 +42,7 @@
   roles:
     - geerlingguy.docker
     - docker_server
-    - dotfiles
+    - dotfiles_copy
 
 - hosts: work_server
   become: true
@@ -54,7 +53,7 @@
   become: true
   roles:
     - arch
-    - dotfiles
+    - dotfiles_clone
 
 # - hosts: bastion
 #   become: true
