Add MariaDB backup role
First time using templates. The role copies a script that backs up MariaDB
in a Docker container.

--- a/deploy.yml
+++ b/deploy.yml
@@ -43,6 +43,11 @@
     - geerlingguy.docker
     - docker_server
     - dotfiles_copy
+    
+- hosts: docker
+  become: true
+  roles: 
+    - mariadb
 
 - hosts: work_server
   become: true
