--- a/roles/docker_server/files/games-docker-compose.yml
+++ b/roles/docker_server/files/games-docker-compose.yml
@@ -53,26 +53,26 @@ services:
       VERSION: "1.16.4"
 
 
-  valheim: 
-    container_name: valheim
-    image: lloesche/valheim-server
-    restart: unless-stopped
-    cap_add:
-      - sys_nice
-    volumes: 
-      - /ssd/app/games/valheim/config:/config
-      - /ssd/app/games/valheim/data:/opt/valheim
-    ports: 
-      - "2549:2549/udp"
-      # - "9001:9001/tcp"
-    stop_grace_period: 2m
-    environment:
-      - SERVER_NAME=Alethkar
-      - WORLD_NAME=Alethkar
-      - SERVER_PORT=2549 
-      - SERVER_PASS=${VALHEIM_PASS}
-      - SERVER_PUBLIC=false
-      - BACKUPS_CRON=""
+  # valheim: 
+  #   container_name: valheim
+  #   image: lloesche/valheim-server
+  #   restart: unless-stopped
+  #   cap_add:
+  #     - sys_nice
+  #   volumes: 
+  #     - /ssd/app/games/valheim/config:/config
+  #     - /ssd/app/games/valheim/data:/opt/valheim
+  #   ports: 
+  #     - "2549:2549/udp"
+  #     # - "9001:9001/tcp"
+  #   stop_grace_period: 2m
+  #   environment:
+  #     - SERVER_NAME=Alethkar
+  #     - WORLD_NAME=Alethkar
+  #     - SERVER_PORT=2549 
+  #     - SERVER_PASS=${VALHEIM_PASS}
+  #     - SERVER_PUBLIC=false
+  #     - BACKUPS_CRON=""
 
 # mc-creative:
 #   container_name: mc-creative
