Add seedling, grafana, split out nfs_client role
Add a new managed seedbox server, seedling. Testing out a
loki/promtail/grafan stack for log aggregation and analysis. Took the
nfs client tasks and split them out into their own role.

--- a/deploy.yml
+++ b/deploy.yml
@@ -41,6 +41,7 @@
   become: true
   roles:
     - geerlingguy.docker
+    - nfs_client
     - docker_server
     - dotfiles_copy
     
@@ -58,6 +59,12 @@
   become: true
   roles:
     - arch
+    - dotfiles_copy
+
+- hosts: seedling
+  become: true
+  roles:
+    - nfs_client
     - dotfiles_copy
 
 # - hosts: bastion
