--- a/roles/docker_server/tasks/main.yml
+++ b/roles/docker_server/tasks/main.yml
@@ -17,12 +17,10 @@
       alias dcl="docker logs"
       alias dclf="docker logs --follow"
 
-- name: Install pip3 and nfs-common
-  tags: docker, sdk, nfs
+- name: Install pip3
+  tags: docker, sdk
   apt:
-    name: 
-      - python3-pip
-      - nfs-common
+    name: python3-pip
 
 - name: Install docker and docker-compose Python modules
   tags: docker, sdk
@@ -31,31 +29,11 @@
     - docker
     - docker-compose
 
-- name: Create mountpoints
-  tags: config, nfs
-  ansible.builtin.file:
-    path: "{{ item }}"
+- name: Create compose directory
+  tags: docker, compose
+  file:
+    path: "{{ compose_dir }}"
     state: directory
-  loop: "{{ nfs_dirs }}"
-  register: mountpoints
-
-- name: Make mountpoints immutable
-  tags: config, nfs
-  ansible.builtin.file:
-    path: "{{ item }}"
-    attributes: +i
-  loop: "{{ nfs_dirs }}"
-  when: mountpoints.changed
-
-- name: Map NFS shares
-  tags: config, nfs
-  lineinfile:
-    path: /etc/fstab
-    regexp: "{{ item }}"
-    line: 10.0.0.5:{{ item }}	{{ item }}	nfs	auto	0	0
-  loop: "{{ nfs_dirs }}"
-  register: nfs
-  
 
 - name: Copy docker-compose.yml
   tags: docker, compose
