--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -34,7 +34,7 @@
     - { src: "zshrc", dest: "/etc/zsh/zshrc" }
     - { src: "zshrc-skel", dest: "/etc/skel/.zshrc" }
     - { src: "zshrc-skel", dest: "/etc/zsh/newuser.zshrc.recommended" }
-    # - { src: "zshrc-skel", dest: "/home/{{ user }}/.zshrc" }
+    - { src: "zshrc-skel", dest: "/home/{{ user }}/.zshrc" }
 
 - name: Set shells to zsh
   tags: zsh, config
