Add jj, rename arch to arch-desktop, fix sshd
Add new server for JJ. Rename arch to arch-desktop, as I've now got an
arch server template. Remove Debian-specific config from sshd_config

--- a/deploy.yml
+++ b/deploy.yml
@@ -55,10 +55,15 @@
   roles:
     - work_server
 
-- hosts: arch
+- hosts: arch-dev
   become: true
   roles:
-    - arch
+    - arch-desktop
+    - dotfiles_copy
+
+- hosts: jj
+  become: true
+  roles:
     - dotfiles_copy
 
 - hosts: seedling
