Set up JJ's server
Had to template out sshd_config to fix an sftp bug, and create a new
role to add users.

--- a/inventory.yml
+++ b/inventory.yml
@@ -7,20 +7,22 @@ all:
   hosts:
     docker:
     gaming:
-    work:
-    arch-dev:
+    # work:
+    # arch-dev:
     # localhost:
     #   ansible_connection: local
   
   children:
     debian:
+      vars:
+        sftp_path: '/usr/lib/openssh/sftp-server'
       hosts:
         bastion:
 
       children:
-        work_server:
-          hosts:
-            work:
+      #   work_server:
+      #     hosts:
+      #       work:
         
         docker_server:
           vars:
@@ -51,7 +53,15 @@ all:
               env_file: seedling.env
 
     arch:
+      vars:
+        sftp_path: '/usr/lib/ssh/sftp-server'
       hosts:
-        arch-dev:
+    #     arch-dev:
         jj:
+          users:
+          - name: "jj"
+            key: |
+                <redacted>
+                <redacted>
+
 
