--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -47,8 +47,8 @@
 
 - name: Set sshd config
   tags: sshd
-  copy:
-    src: sshd_config
+  template:
+    src: sshd_config.j2
     dest: /etc/ssh/sshd_config
     mode: 0644
     owner: root
