Skip fact gathering, jj -> debian, refactor hdd paths, MC 1.18
Playbook execution can be sped up significantly by only gathering facts
once at the beginning. JJ asked that his server be moved over to Debian
instead of Arch. Setting up ZFS native encryption necessitated changing
the paths to hdd resources. Started a new Minecraft server and spun down
an old one

--- a/deploy.yml
+++ b/deploy.yml
@@ -3,6 +3,7 @@
 
 - hosts: debian
   become: true
+  gather_facts: true
   pre_tasks:
   - name: Update package index
     tags: update, upgrade
@@ -17,6 +18,7 @@
 
 - hosts: arch
   become: true
+  gather_facts: false
   pre_tasks:
   - name: Update package index
     tags: update, upgrade
@@ -32,6 +34,7 @@
 
 - hosts: all
   become: true
+  gather_facts: false
   roles:
     - base
     - xterm-js
@@ -48,34 +51,40 @@
     
 - hosts: docker
   become: true
+  gather_facts: false
   roles: 
     - mariadb
 
 - hosts: work_server
   become: true
+  gather_facts: false
   roles:
     - work_server
 
 - hosts: arch-dev
   become: true
+  gather_facts: false
   roles:
     - arch-desktop
     - dotfiles_copy
 
 - hosts: jj
   become: true
+  gather_facts: false
   roles:
     - dotfiles_copy
     - more_users
 
 - hosts: seedling
   become: true
+  gather_facts: false
   roles:
     - nfs_client
     - dotfiles_copy
 
 - hosts: bastion
   become: true
+  gather_facts: false
   roles:
     - dotfiles_copy
     - robertdebock.fail2ban
