--- a/deploy.yml
+++ b/deploy.yml
@@ -82,9 +82,10 @@
     - nfs_client
     - dotfiles_copy
 
-- hosts: bastion
-  become: true
-  gather_facts: false
-  roles:
-    - dotfiles_copy
-    - robertdebock.fail2ban
+# - hosts: bastion
+#   become: true
+#   gather_facts: false
+#   roles:
+#     - dotfiles_copy
+#     - robertdebock.fail2ban
+#     - jnv.mosh
