--- a/roles/arch-workstation/tasks/main.yml
+++ b/roles/arch-workstation/tasks/main.yml
@@ -20,12 +20,11 @@
       - i3blocks  
       - i3lock  
       - i3status
-      # - autotiling
       - dmenu
       - xterm
       # For VM only
-      - xf86-video-qxl
-      - spice-vdagent
+      # - xf86-video-qxl
+      # - spice-vdagent
 
 
 - name: Enable lightdm service
@@ -35,7 +34,7 @@
     enabled: yes
     state: started
 
-- name: Install desktop software packages
+- name: Install workstation software packages
   tags: pkg
   package:
     name:
@@ -46,17 +45,15 @@
       - discord # social client
       - firefox # web browser
       - gimp # image editor
+      - keepassxc # password manager
       - libreoffice-fresh # office software
       - musescore # sheet music editor
       - nextcloud-client # file synchronization
       - nitrogen # background manager
       - obs-studio # screen recorder
-      # - protonvpn-cli-ng # ProtonVPN CLI
       - libqalculate # CLI calculator
       - redshift # blue light reducer
       - signal-desktop # messenger
-      # - spotify # music
-      # - standardnotes-desktop # notes
       - steam # games
       - thunar # file browser
       - thunar-archive-plugin # archive support
@@ -64,17 +61,14 @@
       - tldr # concise, useful manpages
       - tmux # terminal multiplexer
       - transmission-gtk # torrent client
-      # - typora # markdown editor/exporter
       - veracrypt # file encryption
       - vim # vim
       - vim-ansible # ansible highlighting
       - virt-viewer # SPICE client
       - vlc # media player
-      # - vmware-horizon-client # remote resktop client
-      # - vmware-horizon-smartcard # smartcar support
       - youtube-dl # youtube downloader
 
-      # System utilites
+      # System utilities
       - ansible # config manager
       - ark # archive manager
       - baobab # disk usage analyser
@@ -88,7 +82,6 @@
       - nvidia-settings # nvidia x server settings
       - nvtop # GPU monitor
       - kitty # terminal emulator
-      # - magic-wormhole # file transfer
       - neofetch # OS info
       - pv # progress viewer
       - reflector # pacman mirror manager
@@ -104,7 +97,6 @@
 
       # Helpers and styling
       - breeze-icons # icon theme
-      # - brother-hll2350dw # print drivers
       - ccid # smart card driver
       - dunst # notification daemon
       - freetype2 # font rendering
@@ -117,6 +109,22 @@
       - ttf-fira-code # nice font
       - tumbler # thumbnails
 
+- name: Install AUR packages
+  tags: pkg, aur
+  become: false
+  kewlfft.aur.aur:
+    name:
+      - j4-make-config-git # i3 config helper
+      - brother-hll2350dw # print drivers 
+      - magic-wormhole # file transfer
+      - vmware-horizon-client # remote desktop client
+      - vmware-horizon-smartcard # smartcard support
+      - protonvpn # ProtonVPN CLI and GUI
+      - standardnotes-desktop # notes
+      - spotify # music
+      - typora-free # markdown editor/exporter
+      - autotiling # i3 window tiling
+    state: present
 
 - name: Configure lightdm-gtk-greeter
   tags: pkg, config
