Use GitHub SSH keys, add laptop BT, update MC
SSH keys for JJ are now pulled from GitHub. Laptop had packages added
for Bluetooth, as well as some general packages added. Minecraft server
version bumped to 1.18.2

--- a/roles/arch-laptop/tasks/main.yml
+++ b/roles/arch-laptop/tasks/main.yml
@@ -2,4 +2,21 @@
   tags: pkg
   package:
     name:
-    - brightnessctl
+    - brightnessctl # control screen/kbd backlights
+    - bluez # bluetooth
+    - bluez-utils # includes cli management
+
+- name: Enable Bluetooth service
+  tags: pkg
+  service:
+    name: bluetooth
+    enabled: yes
+    state: started
+
+- name: Power Bluetooth adapter on startup
+  tags: pkg
+  blockinfile:
+    path: /etc/bluetooth/main.conf
+    block: |
+      [Policy]
+      AutoEnable=true
