--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -14,6 +14,10 @@
       - curl
       - git
       - ufw
+      - duf # better df
+      - bat # better cat
+      - hexyl # better xxd
+      - fd # better find
     state: latest
 
 - name: Remove unwanted packages
