--- a/roles/docker_server/tasks/main.yml
+++ b/roles/docker_server/tasks/main.yml
@@ -35,14 +35,23 @@
     path: "{{ compose_dir }}"
     state: directory
 
+# - name: Copy docker-compose.yml
+#   tags: docker, compose
+#   copy:
+#     src: "{{ compose_file }}"
+#     dest: "{{ compose_dir }}docker-compose.yml"
+#     mode: 0664
+#     owner: root
+#     group: docker 
+
 - name: Copy docker-compose.yml
   tags: docker, compose
-  copy:
+  template:
     src: "{{ compose_file }}"
     dest: "{{ compose_dir }}docker-compose.yml"
     mode: 0664
     owner: root
-    group: docker 
+    group: docker
 
 - name: Copy .env
   tags: docker, env
