--- a/roles/dotfiles_clone/tasks/main.yml
+++ b/roles/dotfiles_clone/tasks/main.yml
@@ -3,7 +3,7 @@
   become: yes
   become_user: "{{ user }}"
   git:
-    repo: https://gl.<redacted>/<redacted>/dotfiles.git
+    repo: https://gt.{{ domain }}/subract/dotfiles.git
     dest: "/home/{{ user }}/.dotfiles"
   register: dotfiles
 
