--- a/roles/dotfiles_copy/tasks/main.yml
+++ b/roles/dotfiles_copy/tasks/main.yml
@@ -5,7 +5,7 @@
   copy:
     # Depends on dotfiles being located at ~/.dotfiles, which is where the 
     # dotfiles_clone task places them
-    src:  "~/.dotfiles/{{ item.src }}"
+    src:  "dotfiles/{{ item.src }}"
     dest: "/home/{{ user }}/{{ item.dst }}"
     force: yes
   with_items:
