Remove old containers, update Arch packages
Before this was all tracked in git, commenting out old containers in the
Compose file kinda made sense, but it's no longer needed.

--- a/roles/arch-workstation/tasks/main.yml
+++ b/roles/arch-workstation/tasks/main.yml
@@ -76,9 +76,11 @@
       - bat # better cat
       - cowsay # cowsay
       - dnsutils # dig
+      - docker # containers
+      - docker-compose # container management
       - duf # better df
       - eog # image viewer
-      - exiftool # metadata parser
+      - perl-image-exiftool # metadata parser
       - fd # better find
       - hexyl # better xxd
       - iftop # network monitor
@@ -94,6 +96,7 @@
       - rkhunter # rootkit hunter
       - rsync # copy files in style
       - seahorse # keyring viewer
+      - tcpdump # peep some packets
       - testdisk # data recovery
       - traceroute # traceroute
       - tree # directory viewer
